--- a/具体操作步骤/任务五：基于数据库的数据存储与管理.md
+++ b/具体操作步骤/任务五：基于数据库的数据存储与管理.md
@@ -1,3 +1,80 @@
+## **任务五：基于数据库的数据存储与管理**
+
+此任务的目标是将我们在任务四中获取到的实时数据，同步写入到 **MySQL**（关系型数据库）和 **InfluxDB**（时序数据库）中。所有操作都在后端 `backend.py` 文件中完成，前端 VUE 页面无需修改。
+
+这是一个纯后端的任务，我们将分三步进行：
+
+1.  **数据库环境准备**。
+2.  **安装 Python 依赖库**。
+3.  **修改 `backend.py` 代码** 以实现双数据库写入。
+
+-----
+
+### 5.1 数据库环境准备（主机操作步骤）
+
+当您回到主机后，在启动 `backend.py` 之前，必须先配置好两个数据库。
+
+#### 5.1.1 MySQL 数据库配置
+
+根据《实验步骤.pdf》P19-P20，您需要使用 Navicat 等工具完成以下操作：
+
+1.  **确保服务运行：** 确保您的 MySQL 服务正在运行。
+2.  **创建连接：** 在 Navicat 中，创建一个到 `localhost` (主机)、端口 `3306`、用户名为 `root`、并输入您密码的连接。
+3.  **新建数据库：** 右键点击连接，选择“新建数据库”。
+      * 数据库名：`mqtt_data`
+      * 字符集：`utf8`
+      * 排序规则：`utf8_general_ci`
+4.  **新建数据表：**
+      * 双击进入 `mqtt_data` 数据库，右键点击“表”，选择“新建表”。
+      * 根据《实验步骤.pdf》P21的案例，我们创建一个表（我建议添加一个 `id` 主键和 `data_id` 字段以便区分数据）：
+          * `id`：类型 `INT`，勾选 `自动递增` (Auto Increment)，设为 `主键`。
+          * `data_id`：类型 `VARCHAR(50)` (例如 '0103502202')。
+          * `payload`：类型 `VARCHAR(255)` (用于存储数据值)。
+          * `time`：类型 `DATETIME` (用于存储时间戳)。
+      * 点击“保存”，表名填写：`mac_data`。
+
+#### 5.1.2 InfluxDB (边缘端) 配置
+
+根据《实验步骤.pdf》P14-P15，您需要完成以下操作：
+
+1.  **启动服务：**
+      * 打开 `cmd`，`cd` 到您的 InfluxDB 配置文件夹（例如 `E:\MQTT-test\Influxdb配置文件`）。
+      * 运行命令：`influxd`
+      * **保持此 `cmd` 窗口开启**。
+2.  **Web端配置：**
+      * 打开浏览器，访问 `http://localhost:8086`。
+      * 您将看到 InfluxDB 的**首次设置界面**。
+      * 设置您的**用户名**、**密码**、**组织名称** (Organization, 例如 `my-org`) 和**存储桶名称** (Bucket, 例如 `mqtt_bucket`)。
+3.  **获取 Token：**
+      * 设置完成后，您会进入 InfluxDB 的主界面。
+      * 在左侧菜单栏找到 `Data` -\> `API Tokens`。
+      * 您会看到一个为您自动生成的 `<username>'s Token`。
+      * 点击它，然后点击 “Copy to Clipboard” **复制这个 Token**。
+      * **将这个 Token 字符串**、您的\*\*组织名称(Org)**和**存储桶名称(Bucket)\*\*保存好，我们马上要在 `backend.py` 中使用它们。
+
+-----
+
+### 5.2 安装 Python 依赖库
+
+您需要安装用于连接 InfluxDB v2 的 Python 客户端（`pymysql` 我们在任务三已安装）。
+
+当您回到主机后，请在**终端 4** (运行后端的终端) 中，`cd` 到 VUE 项目根目录，并执行：
+
+```bash
+pip install influxdb-client
+```
+
+-----
+
+### 5.3 后端 (Python) 代码更新
+
+现在，我们将修改 `backend.py`，在 `handle_message` 函数中（即每次收到MQTT消息时）添加将数据写入这两个数据库的逻辑。
+
+请**替换** `pyt/backend.py` 文件的**全部内容**为以下代码：
+
+**文件路径：** `juiceyang999/class2up/class2up-9730b2fcdf474be54786a1f787cc6b005a26d2fc/pyt/backend.py`
+
+```python
 from flask import Flask, request, jsonify
 from flask_cors import CORS
 from flask_mqtt import Mqtt
@@ -210,3 +287,43 @@ def get_data():
 # 启动 Flask 服务
 if __name__ == '__main__':
     app.run(debug=True, host='127.0.0.1', port=5000)
+```
+
+-----
+
+### 5.4 运行与调试（当您回到主机时）
+
+1.  **启动环境（共 5 个）：**
+
+      * **终端 1：** 运行 `emqx start` (MQTT Broker)。
+      * **终端 2：** 运行 `StressTest-INC-Cloud -n 1 -b 0` (数据源)。
+      * **终端 3：** 运行 `influxd` (InfluxDB 数据库)。
+      * **终端 4：** 运行 `yarn serve` (VUE 前端)。
+      * **终端 5：** **(重要\!)** 确保您已将 `backend.py` 中的 `MYSQL_PASSWORD` 和 `INFLUX_TOKEN` 修改为您自己的配置。然后运行 `python pyt/backend.py` (Python 后端)。
+
+2.  **测试：**
+
+      * 打开浏览器访问 VUE 页面（如 `http://localhost:8080`）。
+      * 点击 “**数据采集**” 页面，点击 “**连接**”，确保连接成功。
+      * 点击 “**数据显示**” 页面，您会看到 Echarts 图表开始实时显示数据。
+
+3.  **验证存储：**
+
+      * **MySQL 验证：**
+          * 打开 **Navicat**。
+          * 刷新 `mqtt_data` 数据库下的 `mac_data` 表。
+          * **预期结果：** 您会看到表中**每隔几秒就新增一行数据**，包含 `data_id` ('0103502202')、`payload` (速度值) 和 `time` (时间戳)。
+      * **InfluxDB 验证：**
+          * 打开浏览器访问 `http://localhost:8086`。
+          * 点击左侧菜单的 `Explore` (Data Explorer)。
+          * 在查询构建器 (Query Builder) 中：
+              * **FROM:** 选择您的存储桶 `mqtt_bucket`。
+              * **Filter (Measurement):** 选择 `machine_data`。
+              * **Filter (Field):** 选择 `value`。
+              * **Filter (Tag):** 选择 `data_id` = `0103502202`。
+          * 点击 “**Submit**”。
+          * **预期结果：** 您会看到一个与 VUE 页面中 Echarts 几乎一样的实时图表，证明时序数据已成功写入。
+
+**任务五完成**。我们现在已经具备了数据采集、前后端通信、实时可视化和双数据库存储的能力。
+
+接下来，我们将进行**任务六：大数据分布式存储**，这需要我们将 MySQL 中的数据对接到工业大数据平台（Hadoop）。
