--- a/具体操作步骤/任务五：基于数据库的数据存储与管理.md
+++ b/具体操作步骤/任务五：基于数据库的数据存储与管理.md
@@ -325,6 +325,11 @@ if __name__ == '__main__':
               * **Filter (Tag):** 选择 `data_id` = `0103502202`。
           * 点击 “**Submit**”。
           * **预期结果：** 您会看到一个与 VUE 页面中 Echarts 几乎一样的实时图表，证明时序数据已成功写入。
+### 补充：云端 Influxdb 时序数据库存储
+**总述：**
+打开云端 Influxdb 时序数据库服务网页 https://us-east-1-1.aws.cloud2.influxdata.com，注册账号登录。点击 buckets 可以设置数据存储桶，与边缘端相同。点击 source-node 进入配置界面。根据指引可以进行编程，也可参考本地数据库配置代码，功能相同。在 Dataexplorer中可以查看上传的数据。
+
+***见“任务六：搭建云端inflexdb.md”***
 
 **任务五完成**。我们现在已经具备了数据采集、前后端通信、实时可视化和双数据库存储的能力。
 
