--- a/启动.md
+++ b/启动.md
@@ -12,11 +12,11 @@ vscode运行：
 注意对应的环境在终端中打开
 conda activate blackbody
 github配置：
-PS C:\Users\Lenovo\yyf3> git config --global --unset http.proxy
+
 >> git config --global --unset https.proxy
->> PS C:\Users\Lenovo\yyf3> git config --global http.proxy http://127.0.0.1:7890                            
+>> git config --global http.proxy http://127.0.0.1:7890                            
 >> git config --global https.proxy http://127.0.0.1:7890                            
->> PS C:\Users\Lenovo\yyf3> 
+
 
 代码放到移动硬盘里会导致运行和编译速度变慢
 
