--- a/任务一到五遇到主要问题：.md
+++ b/任务一到五遇到主要问题：.md
@@ -1,4 +1,4 @@
-# 任务一到六遇到主要问题：
+# 任务一到五遇到主要问题：
 
 ---
 
@@ -35,7 +35,7 @@
 **问题 5：MySQL 报错 `1045 - Access denied for user 'root'`**
 * **你遇到的现象：** 你用 Navicat 测试连接 MySQL 失败。
 * **背后的原因：** 你在 Navicat 里填的密码，和你电脑上安装 MySQL 时设置的 `root` 密码**不一致**。
-* **解决方案：** 在 `pyt/backend.py` 和 Navicat 中，都统一改成你**正确的** MySQL `root` 密码。
+* **解决方案：** 在 `pyt/backend.py` 和 Navicat 中，都统一改成你**正确的** MySQL `root` 密码。（是在安装masql服务自己设定的密码）
 
 **问题 6：`'influxd' 不是内部或外部命令...`**
 * **你遇到的现象：** 启动 InfluxDB 数据库服务时，系统找不到 `influxd`。
@@ -70,12 +70,3 @@
 * **解决方案：**
     1.  解决“无限重启” Bug（问题7）。
     2.  在 `ShowData.vue` 里的 `setOption` 中**必须**加上 `type: 'line'` 和 `smooth: true`。
-
-**问题 9：InfluxDB 数据库没有数据 (来自 `image_2b8cfc.png` 和 `image_2b909d.png`)**
-* **你遇到的现象：** 本地和云端的 InfluxDB 都是 `No Results` ``，但后端日志却说 `InfluxDB 写入成功`。
-* **背后的原因（这个 Bug 也有两个“元凶”）：**
-    1.  **无限重启的元凶**（问题7）：后端日志打印 `写入成功` 只是代表它**调用了**写入函数，但还没等数据包真正通过网络发到数据库，服务就被**重启**了，所以数据库啥也没收到。
-    2.  **Token 格式的元凶**：你 `backend.py` 里的**云端 Token** 多了 `INFLUXDB_TOKEN=` 字样，导致云端连接认证失败。
-* **解决方案：**
-    1.  解决“无限重启” Bug（问题7）。
-    2.  **清理 Token**，把 `INFLUX_CLOUD_TOKEN = "INFLUXDB_TOKEN=zsOj..."` 改成 `INFLUX_CLOUD_TOKEN = "zsOj..."`。
