--- a/启动.md
+++ b/启动.md
@@ -24,4 +24,9 @@ github配置：
 您会看到 Echarts 图表不显示数据了，
 而且在数据采集界面一点连接可以连接，
 再点到数据显示界面，连接就自动断开了}
-但是再“backend(inflexdb_cloud).py”里修复了？哈哈
+但是在“backend(inflexdb_cloud).py”里修复了？哈哈
+
+查看 json 文件的网址：**https://www.bejson.com/jsonviewernew/**
+
+ElementUI**参考链接：**https://element.eleme.cn/#/zh-CN/component/quickstart
+
