--- a/启动.md
+++ b/启动.md
@@ -11,11 +11,11 @@ mysql密码：cps@CPS123
 vscode运行：
 注意对应的环境在终端中打开
 conda activate blackbody
-github配置：
+github配置：(直接复制粘贴即可)
 
->> git config --global --unset https.proxy
->> git config --global http.proxy http://127.0.0.1:7890                            
->> git config --global https.proxy http://127.0.0.1:7890                            
+git config --global --unset https.proxy
+git config --global http.proxy http://127.0.0.1:7890                            
+git config --global https.proxy http://127.0.0.1:7890                            
 
 
 代码放到移动硬盘里会导致运行和编译速度变慢
